# KubeconfigSwitcher

./: .gitignore  LICENSE  README.md  make-exe.sh  pyproject.toml
.github/workflows/: python-app.yml  unit_test_and_lint.yaml
src/: __main__.py  app.py  file_handler.py
src/kubeconfig_switcher/: app.py  data_models.py  file_handler.py
src/kubeconfig_switcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_file_handler.py
