[tool.poetry]
name = "Kubeconfig Switcher"
description = "An app to switch kube config files."
authors = [
    "Matthew Post",
]
maintainers = [
    "Frank Smith",
]
license = "MIT"
readme = "README.md"
packages = [
    { include = "kubeconfig_switcher", from = "src" }
]
include = [
    { path = "tests" }
]
version = "0.1.0-beta"

# Requirements
[tool.poetry.dependencies]
python = "^3.9"

pydantic = "^1.10.7"

# poetry-core = "1.5.2"
# poetry-plugin-export = "^1.3.1"
# "backports.cached-property" = { version = "^1.0.2", python = "<3.8" }
# build = "^0.10.0"
# cachecontrol = { version = "^0.12.9", extras = ["filecache"] }
# cleo = "^2.0.0"
# crashtest = "^0.4.1"
# dulwich = "^0.21.2"
# filelock = "^3.8.0"
# html5lib = "^1.0"
# importlib-metadata = { version = ">=4.4", python = "<3.10" }
# installer = "^0.7.0"
# jsonschema = "^4.10.0"
# keyring = "^23.9.0"
# lockfile = "^0.12.2"
# # packaging uses calver, so version is unclamped
# packaging = ">=20.4"
# pexpect = "^4.7.0"
# pkginfo = "^1.9.4"
# platformdirs = "^3.0.0"
# pyproject-hooks = "^1.0.0"
# requests = "^2.18"
# requests-toolbelt = ">=0.9.1,<0.11.0"
# shellingham = "^1.5"
# tomli = { version = "^2.0.1", python = "<3.11" }
# tomlkit = ">=0.11.4,<1.0.0"
# # trove-classifiers uses calver, so version is unclamped
# trove-classifiers = ">=2022.5.19"
# virtualenv = "^20.22.0"
# xattr = { version = "^0.10.0", markers = "sys_platform == 'darwin'" }
# urllib3 = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.6"

[tool.poetry.group.test.dependencies]
pytest = "^7.1"

# only used in github actions
[tool.poetry.group.github-actions]
optional = true
[tool.poetry.group.github-actions.dependencies]
pytest-github-actions-annotate-failures = "^0.1.7"

[tool.black]
target-version = ['py39']
