[tool.poetry]
name = "Kubeconfig Switcher"
description = "An app to switch kube config files."
authors = ["Matthew Post"]
maintainers = ["Frank Smith"]
license = "MIT"
readme = "README.md"
packages = [{ include = "kubeconfig_switcher", from = "src" }]
include = [{ path = "tests" }]
version = "0.1.0-beta"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.6"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

# only used in github actions
[tool.poetry.group.github-actions]
optional = true
[tool.poetry.group.github-actions.dependencies]
pytest-github-actions-annotate-failures = "^0.1.7"

[tool.black]
target-version = ['py39']
